# DmxRasterizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.ps1  builder.py  dmxrasterizer.cfg  frag.glsl  main.cpp  readme.md  shader.cpp  shader.h  vertex.glsl
docs/: archive_snippets.md  build.md  changelog.md  cmake.md  history.md  manual.md  opengl.md
docs/dev/: archive_snippets.md  build.md  cmake.md  debug.md  dmxRelay_packets.md
shaders/: frag.glsl  frag9.glsl
src/: appState.cppm  artnet.cpp  artnet.cppm  artnet.hpp  global.hpp  main.cpp  netThread.cppm  oscsend.cpp  oscsend.hpp  shader.cpp  shader.cppm  shader.hpp
src/core/: appState.cppm  applog.cppm  console.cppm  netThread.cppm  settings.cppm
src/core/log/: applog.cppm
src/core/net/: artnet.cppm  control.cppm  netThread.cppm  relay.cppm  winsock.cppm
src/core/render/: render.cppm  shader.cppm  ui.cppm
src/core/render/ui/: footer.cppm  sidebar.cppm  ui.cppm  util.ui.cppm
src/embed/resource/: dmxr16.rgba  dmxr32.rgba  icon.rc
src/include/: buildstamp.hpp
src/mod/: applog.cppm  logging.cppm
src/mod/net/: artnet.cppm  winsock.cppm
src/mod/render/: render.cppm  shader.cppm  ui.cppm
src/resource/: icon.rc
tooling/: build.ps1  testpkt.ps1
